# Object-Oriented-Programming

./: .gitignore
23.01.20/: q1.cpp  q3.cpp  q4.cpp  random.hpp  test.cpp
HOMEWORK/: OOP C++ Lab HW Cover.docx
HOMEWORK/hw1/: CMakeLists.txt  q1.1.cpp  q1.2.cpp  q2.1.cpp  q2.2.cpp  q2.3.cpp  q3.cpp
HOMEWORK/hw10/simple_calculator/: CMakeLists.txt  calc.cpp  calc_expr.cpp  logic2.cpp
HOMEWORK/hw2/: CMakeLists.txt  q1.cpp  q2.1.cpp  q2.2.cpp  q2.cpp  q2_header.hpp  q3.cpp  q3_header.hpp  svg_hw2.html
HOMEWORK/hw3/: q1.cpp  q2.cpp  q3.cpp
HOMEWORK/hw4/: q1.cpp
HOMEWORK/hw5/: q1.cpp  q2.cpp
HOMEWORK/hw6/: q1.cpp  q2.cpp
HOMEWORK/hw7/: q1.cpp  q2.cpp
HOMEWORK/hw8/: 1.1.cpp  1.2.cpp  1.3.cpp  q2.cpp
HOMEWORK/hw9/: q1.cpp  q1.eapx
PRACTICAL/23.01.20/: q2.cpp  q4.cpp
PRACTICAL/23.01.27/: CMakeLists.txt  out2.html  q1.1.cpp  q2.4.cpp  q2.cpp  q3.cpp  style.hpp  svgtag.hpp  test.html
PRACTICAL/23.02.03/: data.txt  q1.cpp  q2.cpp  q3.2fucntion.cpp  q3.2save.cpp  q3.cpp  testsvg.html
PRACTICAL/23.02.10/: q1.cpp  q2.cpp  q3.cpp
PRACTICAL/23.02.17/: data.txt  heart.xpm  q1.cpp  q2.cpp  q3.cpp  svg.html
PRACTICAL/23.02.24/: q1.1.cpp  q1.cpp  q2.cpp  vector.hpp
PRACTICAL/23.03.03/: q1.cpp  q2.cpp  q3.cpp  svg.html  vector.hpp
PRACTICAL/23.03.17/: q1.cpp  q2.cpp  q3.cpp
PRACTICAL/23.03.31/: .gitignore  heroes.html  heroes2.html  html_test.cpp  q2.cpp  q3.cpp  svg2.html
PRACTICAL/23.03.31/lifetime_V1/: CMakeLists.txt  lifetime.cpp  lifetime.hpp
PRACTICAL/23.03.31/lifetime_v2/: CMakeLists.txt  lifetime.cpp  lifetime.hpp
PRACTICAL/23.04.07/: q2.eapx  q3.cpp
PRACTICAL/23.04.07/simple_calculator/: calc.cpp  calc_expr.cpp
build-proj1-Phoom_C-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-proj1-Phoom_C-Debug/.cmake/api/v1/reply/: cache-v2-20710f68a502540b92df.json  cmakeFiles-v1-367fa539ebc6f9fc09b9.json  codemodel-v2-202764a5bdfd9d30e6c0.json  index-2023-04-21T16-36-20-0396.json  target-hello-Debug-649333fdabcd1bee05e7.json
proj1/: CmakeLists.txt  hello.cpp
